Minor margin fix
margin-top was too big, changed from 50px to 20px

--- a/css/creature-block.css
+++ b/css/creature-block.css
@@ -7,7 +7,7 @@
         'actions';
     gap: 0px;
     border: none;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .title {
